# arcula

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  sample.env
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/commands/: info.rs  sync.rs
src/config/: mod.rs
src/core/: sync.rs
src/utils/: mongodb.rs
tests/: README.md  docker_tests.rs
