[package]
name = "arcula"
version = "1.0.4"
edition = "2021"
description = "Arcula - MongoDB database synchronization tool"
authors = ["gagosha <me@gagosha.dev>"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mongodb = "3.2"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.7"
colored = "3.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
indicatif = "0.17"
chrono = "0.4"
tempfile = "3.20"
regex = "1.11.1"
which = "7.0"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.9"
